<resources>
    <string name="app_name">ProyectoBADT2_KaiscerVasquez</string>
    <string name="btn_select">Filtros</string>
    <string name="btn_see">Consultar</string>
    <string name="insert_ok">Terremotos insertados</string>
    <string name="tv_title">Terremotos</string>
    <string name="error_upload">Error en la actualización de datos</string>
    <string name="scale">en la escala de Richter</string>
    <string name="filters">Selecciona un filtro</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="errorFilter">Debes seleccionar un filtro</string>
    <string name="errorOnAttach">Error en onAttach</string>
    <string name="month">Mes</string>
    <string name="year">Año</string>
    <string name="country">País</string>
    <string name="titleFilters">Filtros</string>
    <string name="not_data_found">"No hay terremosto para los filtros selesccionados. "</string>


</resources>