<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_16dp">



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >

                <TextView
                    android:id="@+id/tv_filterMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_10dp"
                    android:text="@string/month"
                    android:textSize="@dimen/size_15sp"
                    android:textColor="@color/color_btn"
                    />

                <Spinner
                    android:id="@+id/spn_filterMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_btn"
                    android:entries="@array/FiltersMonth"
                    android:minHeight="@dimen/height_48dp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >

                <TextView
                    android:id="@+id/tv_filterYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_10dp"
                    android:text="@string/year"
                    android:textSize="@dimen/size_15sp"
                    android:textColor="@color/color_btn"
                    />

                <Spinner
                    android:id="@+id/spn_filterYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_btn"
                    android:spinnerMode="dropdown"
                    android:minHeight="@dimen/height_48dp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >

                <TextView
                    android:id="@+id/tv_filterCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_10dp"
                    android:text="@string/country"
                    android:textSize="@dimen/size_15sp"
                    android:textColor="@color/color_btn"
                    />

                <Spinner
                    android:id="@+id/spn_filterCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_btn"
                    android:spinnerMode="dropdown"
                    android:minHeight="@dimen/height_48dp" />

        </LinearLayout>




</LinearLayout>